Update css file for readability-produced content. Fix a warning in a MWPhotoBrowser.
git-svn-id: http://root.cern.ch/svn/cern-app/trunk@327 59dca7bf-9055-4625-9011-bab61c547c97

--- a/Resources/ArticleCSS.css
+++ b/Resources/ArticleCSS.css
@@ -1,13 +1,15 @@
 body {
     font-family: Georgia;
-    font-size:17px;
+    font-size:24px;
     padding:20px;
+    text-align:justify;
 }
 
 h1 {
     font-family:Helvetica;
     font-size:19px;
     margin-bottom:10px;
+    text-align:center;
 }
 
 h2 {
@@ -21,16 +23,21 @@ h2 {
 img {
     max-width:100%;
     height:auto;
+    float:middle
     /*padding:10px;
     border:1px solid #ccc;*/
 }
 
 p.read {
-    text-align:center;
+    text-align:justify;
 }
 
 p.read img {
     border:0px;
     width:125px;
     height:30px;
+}
+
+p.main {
+    text-align:justify;
 }
